[package]
name = "iam_token_manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1.51"
reqwest = { version = "0.11.4", features = ["json"] }
