[package]
name = "iam_token_manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
futures = "0.3"
async-trait = "0.1.51"
reqwest = { version = "0.11.4", features = ["json"] }
tracing = "0.1"

[dev-dependencies]
clap = "2.33"
tracing-subscriber = "0.2"

[[example]]
name = "ibmtest"
