[package]
name = "iam_token_manager"
version = "0.1.1"
edition = "2018"
authors = [
	"Alexander P."
]
description = "An IAM token manager for IBM Cloud tokens"
repository = "https://github.com/apotry/iam_token_manager"
license = "Apache-2.0"
readme = "README.md"
keywords = [
	"iam",
	"token",
	"cli"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
futures = "0.3"
async-trait = "0.1.51"
reqwest = { version = "0.11.4", features = ["json"] }
tracing = "0.1"
warp = "0.3"
jsonwebtoken = "7"

[dev-dependencies]
clap = "2.33"
tracing-subscriber = "0.2"

[[example]]
name = "ibmtest"
